dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.10 2005/08/16 00:39:37 tom Exp $
AC_PREREQ(2.13.20020210)
AC_REVISION($Revision: 1.10 $)
AC_INIT(diffstat.c)
AC_CONFIG_HEADER(config.h:config_h.in)

AC_PROG_CC
AC_PROG_INSTALL

CF_ANSI_CC_REQD
CF_DISABLE_ECHO
CF_PROG_EXT
CF_WITH_INSTALL_PREFIX

CF_XOPEN_SOURCE
CF_WITH_WARNINGS

AC_CONST
AC_STDC_HEADERS
AC_HAVE_HEADERS(stdlib.h unistd.h)
AC_HAVE_HEADERS(\
getopt.h \
malloc.h \
search.h \
string.h \
)

AC_TYPE_SIZE_T

AC_CHECK_FUNCS(\
fgetc_unlocked \
popen \
tsearch \
)

###	output makefile and config.h
AC_OUTPUT(makefile,,,cat)
