dnl Process this file with autoconf to produce a configure script.
AC_INIT(efax.c)

dnl Get the operating system and version number...
uname=`uname`

AC_PROG_CC
AC_PROG_INSTALL

dnl Fix "prefix" variable if it hasn't been specified...
if test "$prefix" = "NONE"; then
	prefix="/"
fi

dnl Fix "exec_prefix" variable if it hasn't been specified...
if test "$exec_prefix" = "NONE"; then
	if test "$prefix" = "/"; then
		exec_prefix="/usr"
	else
		exec_prefix="$prefix"
	fi
fi

dnl Fix "mandir" variable...
dnl if test "$mandir" = "\${prefix}/man" -a "$prefix" = "/"; then
if test "$mandir" = "\${prefix}/man"; then
	case "$uname" in
        	Darwin* | Linux* | *BSD* | AIX*)
        		# Darwin, MacOS X, Linux, *BSD, and AIX
        		mandir="/usr/share/man"
        		;;
        	*)
        		# All others
        		mandir="/usr/man"
        		;;
	esac
fi

dnl Fix "mandir" variable...
dnl if test "$mandir" = "\${prefix}/man" -a "$prefix" = "/"; then
if test "$mandir" = "\${prefix}/man"; then
	case "$uname" in
        	Darwin* | Linux* | *BSD* | AIX*)
        		# Darwin, MacOS X, Linux, *BSD, and AIX
        		mandir="/usr/share/man"
        		;;
        	*)
        		# All others
        		mandir="/usr/man"
        		;;
	esac
fi

AC_OUTPUT(Makefile)
